# reqm

./: .pre-commit-config.yaml  CLAUDE.md  README.md  TECH_DEBT.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: config_management.md  torch_integration.md
examples/: __init__.py
examples/estimators/: __init__.py  datasets.py
examples/estimators/configs/: __init__.py  mean_outlier.yaml  mean_simple.yaml  median_simple.yaml  trimmed_mean.yaml
examples/estimators/filters/: __init__.py  api.py  no_filter.py  outlier.py  top_k.py
examples/estimators/quants/: __init__.py  api.py  ensemble.py  mean.py  median.py  trimmed_mean.py
examples/estimators/scripts/: __init__.py  compare.py  evaluate.py  inspect_config.py  sweep.py  validate_configs.py
examples/torch_models/: __init__.py  torch_quant.py
examples/torch_models/configs/: __init__.py  linear_simple.yaml  mlp_large.yaml  mlp_small.yaml
examples/torch_models/models/: __init__.py  api.py  linear.py  mlp.py
examples/torch_models/scripts/: audit.py  evaluate.py
src/reqm/: __init__.py  overrides_ext.py  quant.py  quant_manager.py
src/reqm/examples/: __init__.py  hello_world.py  r2p.py
tests/: dummy_objects.py  test_overrides_ext.py  test_quant.py  test_quant_manager.py  test_torch_quant.py
tests/test_config_module_one/: atomic_no_target.yaml  atomic_simple.yaml  chain_end.yaml  chain_middle.yaml  depends_on_atomic.yaml  depends_on_nested.yaml  invalid_no_package_global.yaml  multi_dep.yaml  with_interpolation.yaml  with_missing_interpolation.yaml
(+7 files in other folders)
